--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<nav>
+			<ul>
+				<li><a href="https://course.acciojob.com/web-idle?question=eadd3f0d-2cdf-44f3-8c6c-3e5281445722">HTML 1</a></li>
+				<li><a href="https://course.acciojob.com/web-idle?question=eadd3f0d-2cdf-44f3-8c6c-3e5281445722">HTML 2</a></li>
+				<li><a href="https://course.acciojob.com/web-idle?question=eadd3f0d-2cdf-44f3-8c6c-3e5281445722">HTML 3</a></li>
+				
+			</ul>
+		</nav>
+	</div>
+	<div>
+		3 random audios
+		<ul>
+			<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio></li>
+			<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio></li>
+			<li><audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio></li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
